Add super simple admin index page

--- a/openday_scavenger/views/admin/static/puzzles.html
+++ b/openday_scavenger/views/admin/static/puzzles.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<a href="/admin">Return to admin home</a>
+
 <div id="puzzle-table" hx-get="/admin/puzzles/table" hx-trigger="load" hx-swap="innerHTML"></div>
 {% endblock %}
