--- a/openday_scavenger/views/admin/static/layout.html
+++ b/openday_scavenger/views/admin/static/layout.html
@@ -2,7 +2,9 @@
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
-        <script src="/static/css/tailwind.css"></script>
+        <script src="/static/js/bootstrap.bundle.min.js"></script>
+
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <h1>Admin</h1>
