--- a/openday_scavenger/views/admin/static/puzzles_table.html
+++ b/openday_scavenger/views/admin/static/puzzles_table.html
@@ -1,4 +1,4 @@
-<table class="table-auto">
+<table class="table">
     <thead>
         <tr>
             <th>Name</th>
@@ -14,15 +14,19 @@
         <tr>
             <td>{{ puzzle.name }}</td>
             <td>{{ puzzle.answer }}</td>
-            <td>{% if puzzle.active is true %} Enabled {% else %} Disabled {% endif %}
+            <td>{% if puzzle.active is true %}
+                <span class="badge text-bg-success">Enabled</span>
+                {% else %}
+                <span class="badge text-bg-danger">Disabled</span>
+                {% endif %}
             </td>
             <td>{{ puzzle.location if puzzle.location }}</td>
             <td>{{ puzzle.notes if puzzle.notes }}</td>
             <td>
                 {% if puzzle.active is true %}
-                <button hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": false}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Disable</button>
+                <button type="button" class="btn btn-danger" hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": false}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Disable</button>
                 {% else %}
-                <button hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": true}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Enable</button>
+                <button type="button" class="btn btn-success" hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": true}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Enable</button>
                 {% endif %}
             </td>
         </tr>
