Add visitor endpoints and admin page

--- a/openday_scavenger/views/admin/static/index.html
+++ b/openday_scavenger/views/admin/static/index.html
@@ -3,5 +3,6 @@
 {% block content %}
 <div>
     <a href="/admin/puzzles">Puzzle Management</a>
+    <a href="/admin/visitors">Visitor Management</a>
 </div>
 {% endblock %}
