--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -5,4 +5,11 @@
 
 <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
 
+<div>
+    <form id='visitor-add-form' hx-encoding='multipart/form-data' hx-post='/admin/visitors' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table">
+        <label for="uid">UID:</label>
+        <input type="text" id="uid" name="uid">
+        <button class="btn btn-warning"> Add </button>
+    </form>
+</div>
 {% endblock %}
