--- a/openday_scavenger/views/admin/static/layout.html
+++ b/openday_scavenger/views/admin/static/layout.html
@@ -3,8 +3,11 @@
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
         <script src="/static/js/bootstrap.bundle.min.js"></script>
-
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
+        <link href="/static/css/solid.min.css" rel="stylesheet"/>
+        <link href="/static/css/openday.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="container-fluid">
@@ -17,16 +20,16 @@
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             <li class="nav-item">
                                 <a href="/admin/visitors" class="nav-link align-middle px-0">
-                                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Visitors</span>
+                                    <i class="fa-solid fa-users"></i> <span class="ms-1 d-none d-sm-inline">Visitors</span>
                                 </a>
                                 <a href="/admin/puzzles" class="nav-link align-middle px-0">
-                                    <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Puzzles</span>
+                                    <i class="fa-solid fa-puzzle-piece"></i> <span class="ms-1 d-none d-sm-inline">Puzzles</span>
                                 </a>
                             </li>
                         </ul>                      
                     </div>
                 </aside>
-                <div class="col py-3">
+                <div class="col bg-light py-3">
                     {% block content %}{% endblock %}
                 </div>
             </div>
