--- a/openday_scavenger/views/admin/static/puzzles.html
+++ b/openday_scavenger/views/admin/static/puzzles.html
@@ -1,30 +1,44 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="card m-4">
-    <div class="card-header">
-        <h5 class="card-title">Available Puzzles</h5>
-    </div>
-    <div class="card-body">
-        <div id="puzzle-table" hx-get="/admin/puzzles/table" hx-trigger="load" hx-swap="innerHTML"></div>
-    </div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Available Puzzles</h5>
+     <div id="puzzle-table" hx-get="/admin/puzzles/table" hx-trigger="load" hx-swap="innerHTML"></div>
 </div>
 
-<div class="card m-4">
-    <div class="card-header">
-        <h5 class="card-title">Add a new Puzzles</h5>
-    </div>
-    <div class="card-body">
-        <div>
-            <form id='puzzle-add-form' hx-encoding='multipart/form-data' hx-post='/admin/puzzles' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
-                <br>
-                <label for="name">Answer:</label>
-                <input type="text" id="answer" name="answer">
-                <button> Add </button>
-            </form>
-        </div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Add new Puzzle</h5>
+    <div>
+        <form id='puzzle-add-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/puzzles' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name:</label>
+                            <input type="text" id="name" name="name" class="form-control">
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Location:</label>
+                            <input type="text" id="location" name="location" class="form-control">
+                        </div>
+                        <button class="btn btn-primary">Add new puzzle</button>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Answer:</label>
+                            <input type="text" id="answer" name="answer" class="form-control">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Notes:</label>
+                            <input type="text" id="notes" name="notes" class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %}
