--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -1,27 +1,21 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="card m-4">
-    <div class="card-header">
-        <h5 class="card-title">Visitors</h5>
-    </div>
-    <div class="card-body">
-        <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
-    </div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
+    <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
 </div>
 
-<div class="card m-4">
-    <div class="card-header">
-        <h5 class="card-title">Add a new Visitor</h5>
-    </div>
-    <div class="card-body">
-        <div>
-            <form id='visitor-add-form' hx-encoding='multipart/form-data' hx-post='/admin/visitors' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table">
-                <label for="uid">UID:</label>
-                <input type="text" id="uid" name="uid">
-                <button class="btn btn-warning"> Add </button>
-            </form>
-        </div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Add a new Visitor</h5>
+    <div>
+        <form id='visitor-add-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/visitors' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table">
+            <div class="mb-3">
+                <label for="uid" class="form-label">UID:</label>
+                <input type="text" id="uid" name="uid" class="form-control">
+            </div>
+            <button class="btn btn-primary">Add</button>
+        </form>
     </div>
 </div>
 
