--- a/openday_scavenger/views/admin/static/puzzles_table.html
+++ b/openday_scavenger/views/admin/static/puzzles_table.html
@@ -6,6 +6,7 @@
             <th>Status</th>
             <th>Location</th>
             <th>Notes</th>
+            <th>QR Code</th>
             <th></th>
         </tr>
     </thead>
@@ -22,6 +23,11 @@
             </td>
             <td>{{ puzzle.location if puzzle.location }}</td>
             <td>{{ puzzle.notes if puzzle.notes }}</td>
+            <td>
+                <a href="qr/{{ puzzle.name }}">
+                    <i class="fa-regular fa-qrcode"></i> 
+                </a>
+            </td>
             <td>
                 {% if puzzle.active is true %}
                 <button type="button" class="btn btn-danger" hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": false}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Disable</button>
