--- a/openday_scavenger/views/admin/static/puzzles_table.html
+++ b/openday_scavenger/views/admin/static/puzzles_table.html
@@ -24,15 +24,15 @@
             <td>{{ puzzle.location if puzzle.location }}</td>
             <td>{{ puzzle.notes if puzzle.notes }}</td>
             <td>
-                <a href="qr/{{ puzzle.name }}">
+                <a href="{{ puzzle.name }}/qr">
                     <i class="fa-regular fa-qrcode"></i> 
                 </a>
             </td>
             <td>
                 {% if puzzle.active is true %}
-                <button type="button" class="btn btn-danger" hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": false}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Disable</button>
+                <button type="button" class="btn btn-danger" hx-put="/admin/puzzles/{{ puzzle.name }}" hx-vals='{"active": false}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Disable</button>
                 {% else %}
-                <button type="button" class="btn btn-success" hx-put="/admin/puzzles/{{ puzzle.id }}" hx-vals='{"id": {{ puzzle.id }}, "active": true}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Enable</button>
+                <button type="button" class="btn btn-success" hx-put="/admin/puzzles/{{ puzzle.name }}" hx-vals='{"active": true}' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#puzzle-table">Enable</button>
                 {% endif %}
             </td>
         </tr>
