--- a/openday_scavenger/views/admin/static/visitors_table.html
+++ b/openday_scavenger/views/admin/static/visitors_table.html
@@ -29,7 +29,7 @@
                 {% endif %}
             </td>
             <td>{% if visitor.checked_out is none %}
-                <button type="button" class="btn btn-danger" hx-put="/admin/visitors/{{ visitor.id }}" hx-vals='{"id": {{ visitor.id }}, "check_out": true}' hx-ext="json-enc" hx-swap="innerHTML" hx-target="#visitor-table">Checkout</button>
+                <button type="button" class="btn btn-danger" hx-post="/admin/visitors/{{ visitor.uid }}/checkout" hx-swap="innerHTML" hx-target="#visitor-table">Checkout</button>
                 {% endif %}
             </td>
 
