--- a/openday_scavenger/views/game/static/layout.html
+++ b/openday_scavenger/views/game/static/layout.html
@@ -6,6 +6,7 @@
         <script src="/static/js/html5-qrcode.js"></script>
 
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     
     <body>
