--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -2,11 +2,6 @@
 
 {% block content %}
 <div class="my-3 p-3 bg-body rounded shadow-sm">
-    <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
-    <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
-</div>
-
-<div class="my-3 p-3 bg-body rounded shadow-sm">
     <h5 class="border-bottom pb-2 mb-0">Add a new Visitor</h5>
     <div>
         <form id='visitor-add-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/visitors' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table">
@@ -14,8 +9,72 @@
                 <label for="uid" class="form-label">UID:</label>
                 <input type="text" id="uid" name="uid" class="form-control">
             </div>
-            <button class="btn btn-primary">Add</button>
+            <button class="btn btn-primary">
+                <i class="fa-solid fa-add"></i>
+                Add
+            </button>
         </form>
+    </div>
+</div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
+    <form id='visitor-filter-form' class="mt-3" hx-encoding='multipart/form-data' hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
+        <div class="mb-3">
+            <label for="uid_filter" class="form-label">Filter by UID:</label>
+            <input type="text" id="uid_filter" name="uid_filter" class="form-control">
+        </div>
+        <button id="filter-button" class="btn btn-primary">
+            <i class="fa-solid fa-filter"></i>
+            Filter
+        </button>
+        <button class="btn btn-primary" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table" hx-on::after-request="document.getElementById('uid_filter').value=''">
+            <i class="fa-solid fa-filter-circle-xmark"></i>
+            Clear
+        </button>
+        <button class="btn btn-primary" hx-get="" hx-swap="none" data-bs-toggle="modal" data-bs-target="#modal" hx-on::before-request="setupScanner()">
+            <i class="fa-solid fa-qrcode"></i>
+            Scan
+        </button>
+    </form>
+    <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
+</div>
+<script src="/static/js/html5-qrcode.js"></script>
+<script>
+    
+    var html5QrcodeScanner;
+
+    function onScanSuccess(decodedText, decodedResult) {
+    let myModalEl = document.getElementById('modal')
+    let modal = bootstrap.Modal.getInstance(myModalEl)
+    modal.hide()
+    document.getElementById("uid_filter").value=decodedText;
+    document.getElementById("filter-button").click()
+    }
+
+    function onScanFailure(error) {
+    }
+    function setupScanner() {
+        html5QrcodeScanner = new Html5QrcodeScanner(
+            "reader",
+            { fps: 10, qrbox: {width: 100, height: 100} },
+            false
+        );
+        html5QrcodeScanner.render(onScanSuccess, onScanFailure);
+    }
+    
+    document.addEventListener("hidden.bs.modal", function(){
+        html5QrcodeScanner.clear()
+    })
+
+</script>  
+
+<div id="modal"
+    class="modal modal-blur fade"
+    style="display: none"
+    aria-hidden="false"
+    tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="mx-auto" id="reader" style="width: 400px;"></div>
     </div>
 </div>
 
