--- a/openday_scavenger/views/admin/static/responses.html
+++ b/openday_scavenger/views/admin/static/responses.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="my-3 p-3 bg-body rounded shadow-sm">
     <h5 class="border-bottom pb-2 mb-0">Responses</h5>
-    <form id='visitor-filter-form' class="mt-3" hx-encoding='multipart/form-data' hx-include="[name='puzzle_name'],[name='visitor_uid']"> 
+    <form id='visitor-filter-form' class="mt-3" hx-include="[name='puzzle_name'],[name='visitor_uid']"> 
         <div class="mb-3">
             <label for="puzzle_name" class="form-label">Filter by Puzzle Name:</label>
             <input type="text" id="puzzle_name" name="puzzle_name" class="form-control" hx-trigger="keyup changed delay:500ms" hx-get='/admin/responses/table' hx-swap="innerHTML" hx-target="#response-table">
