--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -38,6 +38,21 @@
     </form>
     <div id="visitor-table" hx-get="/admin/visitors/table" hx-trigger="load" hx-swap="innerHTML"></div>
 </div>
+<div class="my-3 p-3 bg-body rounded shadow-sm">
+    <h5 class="border-bottom pb-2 mb-0">Visitor Pool</h5>
+    <form id='visitor-pool-form' class="mt-3" hx-encoding='multipart/form-data' hx-post='/admin/visitors/pool' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-pool-table"> 
+        <div class="mb-3">
+            <label for="number_of_entries" class="form-label">Number of UIDs:</label>
+            <input type="number" id="number_of_entries" name="number_of_entries" class="form-control">
+        </div>
+        <button id="create-button" class="btn btn-primary">
+            <i class="fa-solid fa-plus"></i>
+            Add
+        </button>
+    </form>
+    <div id="visitor-pool-table" hx-get="/admin/visitors/pool" hx-trigger="load" hx-swap="innerHTML"></div>
+</div>
+
 <script src="/static/js/html5-qrcode.js"></script>
 <script>
     
