--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -21,7 +21,7 @@
     <form id='visitor-filter-form' class="mt-3" hx-encoding='multipart/form-data' hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
         <div class="mb-3">
             <label for="uid_filter" class="form-label">Filter by UID:</label>
-            <input type="text" id="uid_filter" name="uid_filter" class="form-control">
+            <input type="text" id="uid_filter" name="uid_filter" class="form-control" hx-trigger="keyup changed delay:500ms" hx-get='/admin/visitors/table' hx-swap="innerHTML" hx-target="#visitor-table">
         </div>
         <button id="filter-button" class="btn btn-primary">
             <i class="fa-solid fa-filter"></i>
