--- a/openday_scavenger/views/admin/static/visitors.html
+++ b/openday_scavenger/views/admin/static/visitors.html
@@ -18,16 +18,22 @@
 </div>
 <div class="my-3 p-3 bg-body rounded shadow-sm">
     <h5 class="border-bottom pb-2 mb-0">Visitors</h5>
-    <form id='visitor-filter-form' class="mt-3" hx-encoding='multipart/form-data' hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
+    <form id='visitor-filter-form' class="mt-3" hx-encoding='multipart/form-data' hx-trigger="input from:#search-form, input from:[type='checkbox']" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table"> 
         <div class="mb-3">
             <label for="uid_filter" class="form-label">Filter by UID:</label>
             <input type="text" id="uid_filter" name="uid_filter" class="form-control" hx-trigger="keyup changed delay:500ms" hx-get='/admin/visitors/table' hx-swap="innerHTML" hx-target="#visitor-table">
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value=true id="still_playing" name="still_playing">
+            <label class="form-check-label" for="still_playing">
+                Show only visitors still playing
+            </label>
         </div>
         <button id="filter-button" class="btn btn-primary">
             <i class="fa-solid fa-filter"></i>
             Filter
         </button>
-        <button class="btn btn-primary" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table" hx-on::after-request="document.getElementById('uid_filter').value=''">
+        <button class="btn btn-primary" hx-get='/admin/visitors/table' hx-ext='json-enc' hx-swap="innerHTML" hx-target="#visitor-table" hx-on::after-request="document.getElementById('uid_filter').value=''; document.getElementById('still_playing').checked=''">
             <i class="fa-solid fa-filter-circle-xmark"></i>
             Clear
         </button>
