--- a/openday_scavenger/views/admin/static/visitors_table.html
+++ b/openday_scavenger/views/admin/static/visitors_table.html
@@ -12,12 +12,12 @@
         </tr>
     </thead>
     <tbody>
-        {% for visitor, correct, attempted in visitors %}
+        {% for visitor, correct_answers, attempted_puzzles in visitors %}
         <tr>
             <td>{{ visitor.uid }}</td>
             <td>{{ visitor.checked_in.strftime("%H:%M") }}</td>
             <td>{{ visitor.checked_out.strftime("%H:%M") if visitor.checked_out}}</td>
-            <td>{{ correct }}/{{ attempted }}/{{ number_enabled_puzzles }}</td>
+            <td>{{ correct_answers }}/{{ attempted_puzzles }}/{{ number_enabled_puzzles }}</td>
             <td>{% if visitor.checked_out %}
                 <span class="badge text-bg-secondary">Finished</span>
                 {% else %}
