--- a/openday_scavenger/views/game/static/layout.html
+++ b/openday_scavenger/views/game/static/layout.html
@@ -4,6 +4,7 @@
         <script src="/static/js/json-enc.js"></script>
         <script src="/static/js/bootstrap.bundle.min.js"></script>
         <script src="/static/js/html5-qrcode.js"></script>
+        <script src="/static/js/tsparticles.confetti.bundle.min.js"></script>
 
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
