--- a/openday_scavenger/views/game/static/puzzle_completed.html
+++ b/openday_scavenger/views/game/static/puzzle_completed.html
@@ -9,6 +9,10 @@
             origin: { y: 0.6 },
         });
     }, false);
-</script>   
+</script>
+
+Congratulations! You have solved all the puzzles.
+
+Please go back to the registration desk to pick up your prize!
 
 {% endblock %}
