--- a/openday_scavenger/views/game/static/puzzle_correct.html
+++ b/openday_scavenger/views/game/static/puzzle_correct.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-Correct
+You answer is correct!
+
+<div class="game-response-correct-icon">
+    <i class="fa-regular fa-face-smile"></i>
+</div>
+
+<a href="/" class="btn btn-success"><i class="fa-regular fa-puzzle-piece"></i>Scan next puzzle</a>
 
 {% endblock %}
