--- a/openday_scavenger/views/game/static/layout.html
+++ b/openday_scavenger/views/game/static/layout.html
@@ -7,6 +7,10 @@
         <script src="/static/js/tsparticles.confetti.bundle.min.js"></script>
 
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
+        <link href="/static/css/solid.min.css" rel="stylesheet"/>
+        <link href="/static/css/openday.css" rel="stylesheet"/>
+
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     
