--- a/openday_scavenger/views/game/static/puzzle_correct.html
+++ b/openday_scavenger/views/game/static/puzzle_correct.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-You answer is correct!
+Your answer is correct!
 
 <div class="game-response-correct-icon">
     <i class="fa-regular fa-face-smile"></i>
