update style sheet

--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -3,7 +3,7 @@
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
         
-        <link href="static/demo.css" rel="stylesheet">
+        <link href="static/styles.css" rel="stylesheet">
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
