DEV: display the grid based on the puzzle generated

--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -8,18 +8,25 @@
     </head>
     <body>
         <h1>Finder Puzzle</h1>
+        <h2>{{question}}</h2>
+        <div class="grid-container">
+            {% for item in data['puzzle'] %}
+                {% for char in item%}
+                    <div>{{char}}</div>
+                {%endfor%}
+            {% endfor %}
+ 
+        </div>
+
+        <div class="grid-container"> 
+            {% for item in data_as_solution['puzzle'] %}
+                {% for char in item%}
+                    <div>{{char}}</div>
+                {%endfor%}
+            {% endfor %}
+ 
+        </div>
         
-        Finder puzzle will eventually go here.
-
-        <p id="data"><b>{{ data }}</b></p>
-        <p id="solution"><b>{{ solution }}</b></p>
-
-        <!-- create a button, using htmx, that sends a get request to /shuffled -->
-        <button hx-get="new_finder" hx-trigger="click" hx-target="#data" hx-swap="outerHTML">
-            Get finder
-        </button>
-
-        What energy in GeV does the accelerator of the Australian Synchrotron run at?
         
         <form id='form' hx-encoding='multipart/form-data' hx-post='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
