--- a/openday_scavenger/puzzles/finder/static/styles.css
+++ b/openday_scavenger/puzzles/finder/static/styles.css
@@ -104,3 +104,20 @@ button:hover {
     font-weight: bold;
     color: #203d79;
 }
+
+
+.grid-container {
+    display: grid;
+    width: 80%;
+    margin-left: 8%;
+    margin-right: 8%;
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto;
+    
+}
+
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: center;
+    font-size: 30px;
+}
