--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -5,28 +5,22 @@
         
         <link href="static/styles.css" rel="stylesheet">
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+         <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"> -->
     </head>
     <body>
         <h1>Finder Puzzle</h1>
         <h2>{{question}}</h2>
-        <div class="grid-container">
-            {% for item in data['puzzle'] %}
-                {% for char in item%}
-                    <div>{{char}}</div>
-                {%endfor%}
-            {% endfor %}
- 
-        </div>
 
-        <div class="grid-container"> 
-            {% for item in data_as_solution['puzzle'] %}
-                {% for char in item%}
-                    <div>{{char}}</div>
+        <div class="container" style="margin-top:20px;">
+            {% for item in data['puzzle'] %}
+            <div class="row">
+                {% for char in item %}
+                    <div class="column" style="border: 1px solid black;">{{char}}</div>
                 {%endfor%}
+            </div>
             {% endfor %}
  
         </div>
-        
         
         <form id='form' hx-encoding='multipart/form-data' hx-post='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
