BUGFIX: fix hard coded path

--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -22,7 +22,7 @@
  
         </div>
         
-        <form id='form' hx-encoding='multipart/form-data' hx-post='/submission'>
+        <form id='form' method='POST' action='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
             <label for="energy">Energy:</label><br>
