--- a/openday_scavenger/puzzles/finder/static/styles.css
+++ b/openday_scavenger/puzzles/finder/static/styles.css
@@ -44,7 +44,7 @@ form input[type="submit"] {
     border-radius: 5px;
 }
 
-button {
+/* button {
     background-color: #35bfc9;
     border: none;
     color: white;
@@ -60,7 +60,7 @@ button {
 
 button:hover {
     background-color: #2aa3b0;
-}
+} */
 
 /* Style for the response message */
 #response-good {
@@ -111,16 +111,42 @@ button:hover {
     width: 80%;
     margin-left: 8%;
     margin-right: 8%;
-    grid-template-columns: repeat(11,auto);
+    border: 1px solid black;
+    /* grid-gap: 10px; */
+    /* grid-template-columns: repeat(11,auto); */
     
 }
 
-.grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid black;
-    text-align: center;
-    font-size: 30px;
+.form-parent {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.form-button-container {
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    width: 80%;
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+.item {
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    /* padding: 20px; */
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .item-selected {
+    background-color: #d6d6d6;
+  }
+
 
 .row {
     display: flex;
@@ -131,13 +157,50 @@ button:hover {
  
 }
 
-.column {
+.cell {
     display: block;
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 1;
     padding: .75rem;
+    border: 1px solid black;
 }
 
 
+/*********************** Found Words List Start *******************/
+.found-words {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    justify-content: center;
+    /* width: 80%;
+    margin-left: 8%;
+    margin-right: 8%; */
+    margin-bottom : 10px
+}
+
+.word {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* padding: 10px; */
+    justify-content: center;
+    position: relative;
+    background-color: #e4f1ff;
+    border-radius: 8px;
+}
+
  
+.word-delete {
+    position: absolute;
+    top:0;
+    right:4;
+  }
+  
+.word-text {
+    
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+
+/*********************** Found Words List End *******************/
