--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -2,34 +2,58 @@
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
-        
+        <script src="/static/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/js/html5-qrcode.js"></script>
+        <link href="/static/css/fontawesome.min.css" rel="stylesheet" />
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/solid.min.css" rel="stylesheet"/>
+
+        <!-- custom scripts -->
+        <script src="static/js/index.js"></script>
+        <!-- custom styles -->
         <link href="static/styles.css" rel="stylesheet">
+
+
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
-         <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"> -->
     </head>
     <body>
         <h1>Finder Puzzle</h1>
-        <h2>{{question}}</h2>
-
+        <h2 id="question" >{{question}} </h2>
+        <p id="hint" data-num="{{data['words']|length}}"> 😏There are {{data['words']|length}} words hiding. Use the button below to add the each word you find into answer! 👇</p>
         <div class="container" style="margin-top:20px;">
-            {% for item in data['puzzle'] %}
+            {% for i in range(data['puzzle']|length ) %}
             <div class="row">
-                {% for char in item %}
-                    <div class="column" style="border: 1px solid black;">{{char}}</div>
+                {% for j in range(data['puzzle'][i]|length) %}
+                    {% set char = data['puzzle'][i][j] %}
+                     <div class="cell" data-is-in-word="0" data-selected="0" data-row="{{i}}" data-col="{{j}}" data-text= "{{char}}" id="{{i}}-{{j}}" name="char">{{char}}</div>
                 {%endfor%}
             </div>
-            {% endfor %}
- 
+            {% endfor %} 
         </div>
         
-        <form id='form' method='POST' action='/submission'>
-            <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
-            <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
-            <label for="energy">Energy:</label><br>
-            <input type="text" id="answer" name="answer">
-            <button>
-                Submit your answer
-            </button>
-        </form>
+        <div class="form-parent">
+            {% include 'found_words.html' %}
+            <div class = 'form-button-container'>
+                <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
+                <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
+                <!-- <input hidden type="text" id="answer" name="answer" > -->
+                <button id="btn-add" class="btn btn-outline-primary rounded-pill mx-2" ><i class="fa-solid fa-plus"></i>  Add to answer</button>
+                
+                <button id="submit_answer" class="btn btn-outline-primary rounded-pill mx-2"><i class="fa-solid fa-check"></i> Submit your answer</button>
+                    
+            </div>
+            <!-- <form id="form">
+                <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
+                <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
+                <label for="energy">Answer:</label><br>  
+                <input hidden type="text" id="answer" name="answer" >
+                <button class="btn btn-outline-secondary rounded-pill mx-2">Submit your answer</button>
+                    
+            </form> -->
+
+        </div>
+        
+
+        
     </body>
 </html>
