--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -18,9 +18,10 @@
     </head>
     <body>
         <!-- <h1>Finder Puzzle</h1> -->
-        <h2 id="question" >{{question}} </h2>
-        <p id="hint" data-num="{{data['words']|length}}"> 🔍Let's start the words treasure hunting! Click on the letter in the right order to build a word. 😎</p>
-        <p>😏When you are happy with the word, use the button below to add the each word you find into answer! 👇</p>
+        <h2 id="question" > 🔍 Can you find the hidden treasure? </h2>
+        <h3 id="question" >{{question}} </h3>
+        <h5 id="hint" data-num="{{data['words']|length}}"> Select letters in order to build a word. 😎</h5>
+        <h5>😏 Then use the button below to add the words to your answer! 👇</h5>
         <div class="container" style="margin-top:20px;">
             {% for i in range(data['puzzle']|length ) %}
             <div class="row">
