DEV: display result page on submit

--- a/openday_scavenger/puzzles/newbuildings/templates/index.html
+++ b/openday_scavenger/puzzles/newbuildings/templates/index.html
@@ -11,58 +11,13 @@
       rel="stylesheet">
     <script src="/static/js/htmx.min.js"></script>
     <script src="/static/js/json-enc.js"></script>
-    <!-- <script>
-      window.onload = (event) => {
-        document.body.addEventListener('htmx:beforeSwap', function(evt) {
-        if (!evt)
-        {
-          return ;
-        }
-        if(evt.detail.xhr.status === 404){
-            // alert the user when a 404 occurs (maybe use a nicer mechanism than alert())
-            alert("Error: Could Not Find Resource");
-        } else if(evt.detail.xhr.status === 422){
-            // allow 422 responses to swap as we are using this as a signal that
-            // a form was submitted with bad data and want to rerender with the
-            // errors
-            //
-            // set isError to false to avoid error logging in console
-            evt.detail.shouldSwap = true;
-            evt.detail.isError = false;
-        } else if(evt.detail.xhr.status === 418){
-            // if the response code 418 (I'm a teapot) is returned, retarget the
-            // content of the response to the element with the id `teapot`
-            evt.detail.shouldSwap = true;
-            evt.detail.target = htmx.find("#teapot");
-        }else if(evt.detail.xhr.status === 200){
-            // if the response code 418 (I'm a teapot) is returned, retarget the
-            // content of the response to the element with the id `teapot`
-            evt.detail.shouldSwap = false;
-            evt.detail.target = htmx.find("#response");
-            const success = JSON.parse(evt.detail.serverResponse).success;
-            if(success)
-            {
-              document.getElementById("response").innerText="Congratulations! The answer is correct!";
-            }
-            else
-            {
-              document.getElementById("response").innerText="Oops! The answer is incorrect!";
-            }
-            
-            console.log("Find",evt)
-        }
-    });
-    };
-    
-    </script> -->
     <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link href="static/styles.css" rel="stylesheet">
 </head>
-<body>
+<body >
 
 
 <div class="container">
-  <!-- <div class="title-container">count differences</div> -->
    <h1 class="title">Count the New Buildings! 🔍</h1>
 
    <div class="instructions">
@@ -79,7 +34,7 @@
   
   <hr class="solid">
   
-  <form id='form' class="form" hx-encoding='multipart/form-data' hx-post='/submission' hx-swap="outerHTML">
+  <form id='form' class="form" method="POST" action="/submission">
     <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
     <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
 
@@ -93,9 +48,6 @@
     
     <button class="form-button" type="submit">✈ Submit</button>
   </form>
-
-  <!--  hx-target="#response"  <div id="response" >
-  </div> -->
 
 </div>
 </body>
