--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -32,6 +32,8 @@
             {% endfor %} 
         </div>
         
+        {% include 'hint_words.html' %}
+        <button id="btn-hint" data-hide="1">🤯 Show me the words!</button>
         <div class="form-parent">
             {% include 'found_words.html' %}
             <div class = 'form-button-container'>
@@ -39,19 +41,9 @@
                 <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
                 <!-- <input hidden type="text" id="answer" name="answer" > -->
                 <button id="btn-add" class="btn btn-outline-primary rounded-pill mx-2" ><i class="fa-solid fa-plus"></i>  Add to answer</button>
-                
-                <button id="submit_answer" class="btn btn-outline-primary rounded-pill mx-2"><i class="fa-solid fa-check"></i> Submit your answer</button>
+                <button id="btn-submit" class="btn btn-outline-primary rounded-pill mx-2"><i class="fa-solid fa-check"></i> Submit your answer</button>
                     
             </div>
-            <!-- <form id="form">
-                <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
-                <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
-                <label for="energy">Answer:</label><br>  
-                <input hidden type="text" id="answer" name="answer" >
-                <button class="btn btn-outline-secondary rounded-pill mx-2">Submit your answer</button>
-                    
-            </form> -->
-
         </div>
         
 
