Update hint button

--- a/openday_scavenger/puzzles/finder/templates/index.html
+++ b/openday_scavenger/puzzles/finder/templates/index.html
@@ -34,7 +34,7 @@
         </div>
         
         {% include 'hint_words.html' %}
-        <button id="btn-hint" data-hide="1">🤯 Show me the words!</button>
+        <button id="btn-hint" data-hide="1">🤯 I need a hint!</button>
         <div class="form-parent">
             {% include 'found_words.html' %}
             <div class = 'form-button-container'>
