--- a/openday_scavenger/puzzles/finder/static/styles.css
+++ b/openday_scavenger/puzzles/finder/static/styles.css
@@ -88,26 +88,26 @@ h1 {
 }
 
 .item-is-in-word {
-    background-color: #cdb1d8;
+    background-color: #cdb1d8; /* ansto light blue #0077c163; */
 }
 
 /*********************** Found Words List Start *******************/
 .found-words {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    display: flex;
     gap: 10px;
     justify-content: center;
     margin-bottom : 10px
 }
 
 .word {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(2, 1fr);
     /* padding: 10px; */
     justify-content: center;
     position: relative;
-    background-color: #e4f1ff;
+    background-color: #f5eff5;
     border-radius: 8px;
+    column-gap: 10px;
 }
 
  
@@ -128,10 +128,10 @@ h1 {
 
 /*********************** Hint Words Start  *********************/
 .hint-word-parent {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    display: flex;
     gap: 10px;
     justify-content: center;
+    align-items: center;
     margin-bottom : 10px;
     visibility: hidden;
     width: 80%;
